--- a/install_apache.yaml
+++ b/install_apache.yaml
@@ -4,12 +4,20 @@
   become: true
   tasks:
 
-  - name: install apache and php packages , update cache
-    package:
+  - name: install apache and php packages for Ubuntu, update cache
+    apt:
       name:
-        - "{{ apache_package }}"
-        - "{{ php_package }}"
+        - apache2
+        - librapache2-mod-php
       state: latest
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
 
-
+  - name: install apache and php packages for CentOS , update cache
+    dnf:
+      name:
+        - httpd
+        - php
+      state: latest
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
